--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
       "last 1 safari version"
     ]
   },
-  "homepage": "http://hyobi-lim.github.io/Speech-To-Letter/"
+  "homepage": "http://hyobi-lim.github.io/Speech-To-Letter-Kor/"
 }
